# psplife

./: .gitignore  CMakeLists.txt  readme.md
src/: callback.c  callback.h  colors.h  comp  ctrl.c  ctrl.h  life.c  life.h  main.c  rect.c  rect.h  var.h
